--- a/templates/common/step_progressbar.html
+++ b/templates/common/step_progressbar.html
@@ -6,7 +6,7 @@
                 <ul id="step_progressbar" class="progressbar">
                     <li class="{% if convention_form_step > 1  %}active{% endif %} {% if convention_form_step == 1  %}current_step{% endif %}" role="selection"><div>Sélection</div></li>
                     <li class="{% if convention_form_step > 2  %}active{% endif %} {% if convention_form_step == 2  %}current_step{% endif %} {% if convention_form_step == 1  %}after_step{% endif %}" role="bailleur"><div>Bailleur</div></li>
-                    <li class="{% if convention_form_step > 3  %}active{% endif %} {% if convention_form_step == 3  %}current_step{% endif %} {% if convention_form_step == 2  %}after_step{% endif %}" role="programme"><div>Programme</div></li>
+                    <li class="{% if convention_form_step > 3  %}active{% endif %} {% if convention_form_step == 3  %}current_step{% endif %} {% if convention_form_step == 2  %}after_step{% endif %}" role="programme"><div>Opération</div></li>
                     <li class="{% if convention_form_step > 4  %}active{% endif %} {% if convention_form_step == 4  %}current_step{% endif %} {% if convention_form_step == 3  %}after_step{% endif %}" role="cadastre"><div>Cadastre</div></li>
                     <li class="{% if convention_form_step > 5  %}active{% endif %} {% if convention_form_step == 5  %}current_step{% endif %} {% if convention_form_step == 4  %}after_step{% endif %}" role="edd"><div>EDD</div></li>
                     <li class="{% if convention_form_step > 6  %}active{% endif %} {% if convention_form_step == 6  %}current_step{% endif %} {% if convention_form_step == 5  %}after_step{% endif %}" role="financement"><div>Financement</div></li>
