--- a/templates/common/form/input_textarea.html
+++ b/templates/common/form/input_textarea.html
@@ -2,10 +2,14 @@
     {% if label %}
         <label class="fr-label" for="{{form_input.id_for_label}}">
             {{ label }}
+            {% include "common/form/required_field.html" with form_input=form_input %}
+            {% include "common/help_field.html" with form_input=form_input %}
         </label>
     {% elif form_input.label %}
         <label class="fr-label" for="{{form_input.id_for_label}}">
             {{ form_input.label }}
+            {% include "common/form/required_field.html" with form_input=form_input %}
+            {% include "common/help_field.html" with form_input=form_input %}
         </label>
     {% endif %}
     <div class="fr-mt-1w block--row-strech" id="{{form_input.id_for_label}}_div">
