--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -33,7 +33,7 @@
                         <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - État descriptif de division</h2> -->
 
                         <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
-                            <p>Pour rappel, l'état descriptif de division est quand un programme comporte plusieurs financements et donc plusieurs conventions. </p>
+                            <p>Pour rappel, l'état descriptif de division est quand une opération comporte plusieurs financements et donc plusieurs conventions. </p>
                             <p>Il existe 3 types d’EDD: EDD volumétrique, EDD classique & EDD simplifié</p>
                         </div>
 
