--- a/templates/conventions/programme.html
+++ b/templates/conventions/programme.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block page_title %}Programme - APiLos{% endblock%}
+{% block page_title %}Opération - APiLos{% endblock%}
 
 {% block javascript_extras %}
     <script src="{% static "js/comment-factory.js" %}" nonce="{{request.csp_nonce}}"></script>
@@ -17,9 +17,8 @@
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
                     <div class="fr-col-md-12">
-                        <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Nature du programme immobilier</h2> -->
 
-                        <h4>Adresse du programme</h4>
+                        <h4>Adresse(s) de l'opération</h4>
 
                         {% include "common/form/input_text.html" with form_input=form.nom object_field="programme__nom__"|add:form.uuid.value %}
                         {% include "common/form/input_textarea.html" with form_input=form.adresse object_field="programme__adresse__"|add:form.uuid.value %}
@@ -33,7 +32,7 @@
                             </div>
                         </div>
 
-                        <h4 class="fr-mt-2w">Détails du programme</h4>
+                        <h4 class="fr-mt-2w">Détails de l'opération</h4>
 
                         <div class="fr-grid-row fr-grid-row--gutters">
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
