--- a/templates/conventions/actions/delete.html
+++ b/templates/conventions/actions/delete.html
@@ -1,4 +1,4 @@
-{% if convention.statut == 'BROUILLON' %}
+{% if convention.statut == '1. Projet' %}
     <a class="fr-link" href="#" data-fr-opened="false" aria-controls="fr-modal-{{convention.uuid}}"><span class="fr-fi-delete-line" aria-hidden="true"></span></a>
     <dialog aria-labelledby="fr-modal-{{convention.uuid}}-title" id="fr-modal-{{convention.uuid}}" class="fr-modal" role="dialog" >
         <div class="fr-container fr-container--fluid fr-container-md">
