--- a/templates/conventions/instructeur_notification.html
+++ b/templates/conventions/instructeur_notification.html
@@ -5,7 +5,13 @@
             {% if convention.get_last_bailleur_notification %}
                 <p>Denière notification de l'instructeur : {{ convention.get_last_bailleur_notification.cree_le }}</p>
             {% endif %}
-            <p class='fr-h4'>Vous avez modifié la convention et/ou vous souhaitez faire part de vos commentaires à l'instructeur ? Notifier l'instructeur</p>
+            {% if convention.statut == '3. Corrections requises' %}
+                <h4>Vous avez modifié la convention<br>
+                    Renvoyez la convention à l'instruction</h4>
+            {% else %}
+                <h4>Vous avez modifié la convention<br>
+                    Faites part de vos commentaires à l'instructeur ? </h4>
+            {% endif %}
             <div>
                 <form method="post" action="{% url 'conventions:feedback' convention_uuid=convention.uuid %}">
                     {% csrf_token %}
@@ -23,9 +29,15 @@
                         </label>
                     </div>
                     {% include "common/form/input_textarea.html" with form_input=notificationForm.comment label="Ajouter un commentaire à l'attention de l'instructeur (optionnel)" editable=True %}
-                    <button class="fr-btn">
-                        Notifier l'instructeur
-                    </button>
+                    {% if convention.statut == '3. Corrections requises' %}
+                        <button class="fr-btn">
+                            Renvoyer la convention à l'instruction
+                        </button>
+                    {% else %}
+                        <button class="fr-btn">
+                            Notifier l'instructeur
+                        </button>
+                    {% endif %}
                 </form>
             </div>
         </div>
