--- a/templates/conventions/stationnements.html
+++ b/templates/conventions/stationnements.html
@@ -42,7 +42,7 @@
                             <table>
                                 <thead>
                                     <tr>
-                                        {% if convention.statut != 'BROUILLON' %}
+                                        {% if convention.statut != '1. Projet' %}
                                             {% include 'common/utils/comments_header.html' with object_name='type_stationnement' label='Types de stationnement' %}
                                         {% endif %}
                                         <th scope="col" class="col__width--150">Type de stationnement {% if formset.total_form_count %}{% include "common/form/required_field_star.html" %}{% endif %}</th>
@@ -54,7 +54,7 @@
                                     {% for form in formset %}
                                         {% with main_object_field="type_stationnement__uuid__"|add:form.uuid.value %}
                                             <tr id="{{form.uuid.id_for_label}}_group">
-                                                {% if convention.statut != 'BROUILLON' %}
+                                                {% if convention.statut != '1. Projet' %}
                                                     <td id="{{form.uuid.id_for_label}}_div">
                                                         {% include 'common/utils/comments_field.html' with object_field=main_object_field form_input=form.uuid %}
                                                     </td>
